fix scroll not working on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,6 @@ body {
 }
 
 html {
-  height: auto; /* Important for Lenis */
-  overflow: hidden; /* Prevent default scroll */
+  height: auto;
+  /* overflow: hidden;  */
 }
